sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:17: error: ';' expected but 'else' found.
       else {
       ^